--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .pic {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.199)), url("/img/banner2.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.199)), url("./img/banner2.png");
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -682,9 +682,9 @@ h3 span {
     color: #D5D5D5;
     font-weight: 300;
     padding-left: 50px;
-    /* font-family: sans-serif; */
+
     margin-bottom: 0;
-    /* line-height: 28px; */
+
 }
 
 .row-3part {
@@ -717,9 +717,6 @@ h3 span {
 }
 
 .businoss {
-    /* width: 100px;
-    height: 100px;
-    background-color: red; */
     padding-top: 0;
     padding-bottom: 15px;
     position: relative;
