--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 .pic {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.199)), url("./img/banner2.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.171), rgba(0, 0, 0, 0.199)), url("img/banner2.png");
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
@@ -41,11 +41,16 @@ ul {
     display: inline;
 }
 
-.right-row {
+.header-top .row {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+/* .right-row {
     position: relative;
     top: 10px;
     left: 550px;
-}
+} */
 
 .icon a i {
     color: white;
@@ -75,9 +80,14 @@ ul {
     align-items: center;
 }
 
+
 img {
     vertical-align: middle;
     border-style: none;
+}
+
+.lego {
+    display: inline-block;
 }
 
 .lego a {
@@ -97,67 +107,117 @@ img {
 }
 
 .main-menu {
-    text-align: center;
-    padding: 12px 0;
+    position: relative;
 }
 
-.main-menu nav ul li {
+.navigation {
+    position: absolute;
+    top: -34px;
+    left: 20%;
+}
+
+nav ul li a {
+    color: #fff;
+    font-family: sans-serif;
+}
+
+nav ul li {
     display: inline-block;
+}
+
+nav ul ul {
+    display: none;
+}
+
+nav ul li:hover>ul {
+    display: block;
+}
+
+.submenu {
+    color: #1f1f1f;
+    background-color: #fff;
+
+}
+
+nav ul {
+
+    padding: 0 20px;
+
     position: relative;
+    display: inline-table;
+}
+
+nav ul ::after {
+    content: "";
+    display: block;
+}
+
+nav ul li {
+    position: relative;
+    font-weight: bold;
     margin: 0 10px;
 }
 
-ul li:first-child a {
-    padding-left: 0;
-}
-
-.main-menu ul li a {
-    color: #fff;
-    font-size: 15px;
-    font-weight: 400;
+nav ul li a {
+    display: block;
+    padding: 7px 10px;
     text-decoration: none;
 }
 
-ul li .submenu {
+nav ul ul {
+    padding: 0;
     position: absolute;
+    top: 100%;
     left: 0;
-    top: 160%;
-    background: #fff;
     width: 200px;
-    z-index: 2;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 2%);
-    opacity: 0;
-    visibility: visible;
-    text-align: left;
-    transition: 0.6s;
 }
 
-.main-menu ul li .submenu li {
-    display: block;
-}
-
-.main-menu ul li {
+nav ul ul li {
     position: relative;
-    margin: 0 10px;
+    color: #1f1f1f;
 }
 
-li {
-    list-style-type: none;
+nav ul ul li:hover a {
+    transition: 0.7s;
+    box-shadow: 0 0 9px rgba(0, 0, 0, 0.6);
+
 }
 
-.main-menu ul li .submenu li a {
-    padding: 10px 15px;
-    position: inherit;
-    transition: 0.3s;
-    display: block;
-    color: #000;
+nav ul ul ul {
+    position: absolute;
+    right: 100%;
+    top: 0;
 }
 
 .main-menu ul li .submenu li {
     display: block;
+}
+
+.Quote {
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .serch a {
+    color: #1f1f1f;
+    outline: medium none;
+    margin-right: 15px;
+    text-decoration: none;
+    background: #28ae60;
+    display: inline-block;
+    padding: 14px 27px;
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 5px;
+    text-align: center;
+    color: #fff;
+    text-transform: capitalize;
+    letter-spacing: 2px;
+    cursor: pointer;
+}
+
+/* .serch a {
     color: #1f1f1f;
     outline: medium none;
     transition: 0.3s;
@@ -165,21 +225,21 @@ li {
     background-color: #14b363;
     border: 5px solid #14b363;
 
-}
+} */
 
-.serch a i {
+/* .serch a i {
     color: #e8e8e8;
-}
+} */
 
-.key a {
+/* .key a {
     position: relative;
     left: 590px;
-}
+} */
 
-.main-menu {
+/* .main-menu {
     margin: 0 100px;
     font-family: sans-serif;
-}
+} */
 
 .sticky-header {
     position: sticky;
@@ -288,7 +348,7 @@ li {
     width: 289.98px;
     height: 280.03px;
     text-align: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.205), rgba(0, 0, 0, 0.199)), url("/img/1\ \(2\).png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.205), rgba(0, 0, 0, 0.199)), url("img/1\ \(2\).png");
     background-size: cover;
     background-position: center center;
     overflow: hidden;
@@ -344,7 +404,7 @@ li {
 .background2 {
     width: 289.98px;
     height: 280.03px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.212), rgba(0, 0, 0, 0.185)), url("/img/2\ \(1\).png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.212), rgba(0, 0, 0, 0.185)), url("img/2\ \(1\).png");
     background-size: cover;
     background-position: center center;
     overflow: hidden;
@@ -380,7 +440,7 @@ li {
 .background3 {
     width: 289.98px;
     height: 280.03px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.199), rgba(0, 0, 0, 0.185)), url("/img/3.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.199), rgba(0, 0, 0, 0.185)), url("img/3.png");
     background-size: cover;
     background-position: center center;
     overflow: hidden;
@@ -542,27 +602,27 @@ li {
 }
 
 .galery1 {
-    background-image: url("/img/1\ \(1\).png");
+    background-image: url("img/1\ \(1\).png");
     background-size: cover;
 }
 
 .galery2 {
-    background-image: url("/img/2\ \(2\).png");
+    background-image: url("img/2\ \(2\).png");
     background-size: cover;
 }
 
 .galery3 {
-    background-image: url("/img/3\ \(1\).png");
+    background-image: url("img/3\ \(1\).png");
     background-size: cover;
 }
 
 .galery4 {
-    background-image: url("/img/4.png");
+    background-image: url("img/4.png");
     background-size: cover;
 }
 
 .galery5 {
-    background-image: url("/img/5.png");
+    background-image: url("img/5.png");
     background-size: cover;
 }
 
@@ -632,7 +692,7 @@ h3 span {
 }
 
 .area {
-    background-image: url("/img/about_bg.png");
+    background-image: url("img/about_bg.png");
     padding: 145px 0 115px 0;
     background-size: cover;
     position: relative;
@@ -733,7 +793,7 @@ h3 span {
 .circle1 {
     width: 100px;
     height: 100px;
-    background-image: url("/img/1.png.webp");
+    background-image: url("img/1.png.webp");
     background-size: cover;
     background-position: center center;
     border-radius: 50%;
@@ -745,7 +805,7 @@ h3 span {
 .circle2 {
     width: 40px;
     height: 40px;
-    background-image: url("/img/1.png.webp");
+    background-image: url("img/1.png.webp");
     background-size: cover;
     background-position: center center;
     border-radius: 50%;
@@ -757,7 +817,7 @@ h3 span {
 .circle3 {
     width: 40px;
     height: 40px;
-    background-image: url("/img/1.png.webp");
+    background-image: url("img/1.png.webp");
     background-size: cover;
     background-position: center center;
     border-radius: 50%;
