--- a/style1.css
+++ b/style1.css
@@ -23,7 +23,7 @@ body {
 .pic {
     width: 100%;
     height: 400px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.548), rgba(0, 0, 0, 0.555)), url("/img/bradcam_4\ \(1\).png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.548), rgba(0, 0, 0, 0.555)), url("img/bradcam_4\ \(1\).png");
     background-position: center center;
     background-size: cover;
     background-position: center center;
