--- a/style1.css
+++ b/style1.css
@@ -229,7 +229,7 @@ li {
     margin-top: 20px;
     width: 100%;
     height: 250px;
-    background-image: url("/img/202203310807-main.jpg");
+    background-image: url("img/202203310807-main.jpg");
     background-size: cover;
     padding: 280px 0 185px 0;
 }
